# aem-dispatcher-security-scan

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  aem-dispatcher-scanner.sh  aem-sec-paths.txt  dev-requirements.txt  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  scan.py  security_scan_status.py  security_scanner.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/: cli.py
src/aem_dispatcher_security_scan/: aem_dispatcher_security_scan.py  scan_result.py  scan_status.py  security_scan_status.py  security_scanner.py
tests/: paths-from-file.json  paths-from-file.txt  test_aem_dispatcher_security_scan.py  test_security_scan_status.py  test_security_scanner.py
tests/fixtures/: paths-from-file.csv  paths-from-file.txt  test-file.txt
